tests/baselines/reference/assignmentCompatPredicates1.errors.txt
tests/cases/compiler/assignmentCompatPredicates1.ts(13,5): error TS2322: Type 'PrivateMessage' is not assignable to type '{ text: string; userid: number; }'.
  Property 'userid' is not present in type 'PrivateMessage'.


==== tests/cases/compiler/assignmentCompatPredicates1.ts (1 errors) ====
    
    interface PrivateMessage {
        text?: string;
        userid?: number;
        screenname?: string;
    } constrains {
        present(text);
        or(and(present(userid), not(present(screenname))),
        and(not(present(userid)), present(screenname)));
    }
    
    let pm: PrivateMessage = { text: "Hi!", userid: 42 };
    let obj: { text: string, userid: number } = pm;
        ~~~
!!! error TS2322: Type 'PrivateMessage' is not assignable to type '{ text: string; userid: number; }'.
!!! error TS2322:   Property 'userid' is not present in type 'PrivateMessage'.